Replace String UTF-8 with a charset
Signed-off-by: jansupol <jan.supol@oracle.com>